@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction
skinparam classAttributeIconSize 0

hide circle
hide methods

class Organization {
    id
    name
    vatNumber
    website
    phoneNumber
    email
}

class SystemUser {
    name
    birthDate
    admissionDate
    email
    taxNumber
    phoneNumber
    address
}

class Collaborator {

    assignedTasks
}

class "Task" {
    -name
    -description
    -urgency
    -expectedDuration
    -status
    -greenSpace
}

SystemUser -- System : uses
Organization "1" -- "0..*" SystemUser : has
Collaborator "1" -- "1" SystemUser : is a >
Collaborator "1" -- "0..*" Task : has
@enduml
